--- a/app/src/main/res/layout/drink_row.xml
+++ b/app/src/main/res/layout/drink_row.xml
@@ -8,27 +8,28 @@
 
     <TextView
         android:id="@+id/textKind"
-        android:layout_width="150dp"
+        android:layout_width="89dp"
         android:layout_height="58dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/arsenal"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTime"
-        android:layout_width="150dp"
+        android:layout_width="237dp"
         android:layout_height="58dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/arsenal"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textKind"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
