--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".GraphActivity">
 
+    <com.github.mikephil.charting.charts.BarChart
+        android:layout_height="400dp"
+        android:layout_width="match_parent"
+        android:id="@+id/bargraph"
+        />
+
 </android.support.constraint.ConstraintLayout>
