--- a/app/src/main/res/layout/activity_trophy.xml
+++ b/app/src/main/res/layout/activity_trophy.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrophyActivity">
+    tools:context=".GraphActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <GridView
+        android:id="@+id/trophyGrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="3"
+        android:stretchMode="columnWidth" />
+</LinearLayout>
