--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#004D40</color>
-    <color name="colorPrimaryDark">#004D40</color>
-    <color name="colorAccent">#64FFDA</color>
+    <color name="colorPrimary">#C5CAE9</color>
+    <color name="colorPrimaryDark">#C5CAE9</color>
+    <color name="colorAccent">#C5CAE9</color>
 </resources>
