--- a/app/src/main/res/layout/activity_plus.xml
+++ b/app/src/main/res/layout/activity_plus.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#C5CAE9"
+    android:background="#64B5F6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PlusActivity">
@@ -14,6 +14,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:onClick="addDrink"
+        android:background="#2196F3"
         android:text="+ beer"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
