--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -4,127 +4,238 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C5CAE9"
+    android:background="#64B5F6"
     tools:context=".InputActivity">
 
-    <Button
-        android:id="@+id/beer"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
+    <ImageView
+        android:id="@+id/beer4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="beer"
         android:onClick="addDrink"
-        android:text="+ beer"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />
-
-    <Button
-        android:id="@+id/wine"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="addDrink"
-        android:text="+ wine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/beer" />
-
-    <Button
-        android:id="@+id/mixed"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="addDrink"
-        android:text="+ mixed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wine" />
-
-    <Button
-        android:id="@+id/liquor"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="addDrink"
-        android:text="+ liquor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mixed" />
-
-    <Button
-        android:id="@+id/craftbeer"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="addDrink"
-        android:text="+ craftbeer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/liquor" />
-
-    <TextView
-        android:id="@+id/textBeer"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/arsenal"
-        android:text="Beer"
-        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateEdit" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/beer" />
 
-    <TextView
-        android:id="@+id/textWine"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/arsenal"
-        android:text="Wine"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBeer" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#64B5F6"
+        tools:context=".PlusActivity"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-    <TextView
-        android:id="@+id/textMixed"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:fontFamily="@font/arsenal"
-        android:text="Mixed"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textWine" />
 
-    <TextView
-        android:id="@+id/textLiquor"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:fontFamily="@font/arsenal"
-        android:text="Liquor"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textMixed" />
+        <ImageView
+            android:id="@+id/mixedplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView10"
+            app:layout_constraintTop_toTopOf="@+id/mixed"
+            app:srcCompat="@drawable/plus" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="116dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/arsenal"
-        android:text="Craft Beer"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textLiquor"
-        app:layout_constraintVertical_bias="0.0" />
+        <ImageView
+            android:id="@+id/liquorplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView9"
+            app:layout_constraintTop_toTopOf="@+id/liquor"
+            app:srcCompat="@drawable/plus" />
+
+        <ImageView
+            android:id="@+id/craftbeerplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toTopOf="@+id/craftbeer"
+            app:srcCompat="@drawable/plus" />
+
+        <ImageView
+            android:id="@+id/cocktailplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toTopOf="@+id/cocktail"
+            app:srcCompat="@drawable/plus" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="81dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Craftbeer"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/craftbeer" />
+
+        <ImageView
+            android:id="@+id/wine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginBottom="48dp"
+            android:contentDescription="wine"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toTopOf="@+id/liquor"
+            app:layout_constraintStart_toEndOf="@+id/beer"
+            app:srcCompat="@drawable/wine" />
+
+        <ImageView
+            android:id="@+id/beer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="48dp"
+            android:contentDescription="beer"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toTopOf="@+id/craftbeer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/beer" />
+
+        <ImageView
+            android:id="@+id/cocktail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="48dp"
+            android:contentDescription="cocktail"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toTopOf="@+id/mixed"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/cocktail" />
+
+        <ImageView
+            android:id="@+id/craftbeer"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="92dp"
+            android:contentDescription="craftsbeer"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/craftsbeer" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="69dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Beer"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/beer" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="69dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Wine"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/wine" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="69dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Cocktail"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cocktail" />
+
+        <ImageView
+            android:id="@+id/liquor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="92dp"
+            android:contentDescription="liquor"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/craftbeer"
+            app:srcCompat="@drawable/liquor" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="81dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Liquor"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/liquor" />
+
+        <ImageView
+            android:id="@+id/mixed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="92dp"
+            android:contentDescription="mixed"
+            android:onClick="addDrink"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/mixed" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="81dp"
+            android:layout_height="29dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/arsenal"
+            android:text="Mixed"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mixed" />
+
+        <ImageView
+            android:id="@+id/beerplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/beer"
+            app:srcCompat="@drawable/plus" />
+
+        <ImageView
+            android:id="@+id/wineplus"
+            android:layout_width="37dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="64dp"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/wine"
+            app:srcCompat="@drawable/plus" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <EditText
         android:id="@+id/dateEdit"
