--- a/app/src/main/res/layout/drink_row.xml
+++ b/app/src/main/res/layout/drink_row.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#C5CAE9"
+    android:background="#64B5F6"
     android:layout_height="match_parent">
 
     <TextView
